--- a/index.html
+++ b/index.html
@@ -3,10 +3,6 @@
     <title>web page</title>
 </hed>
 <body>
-            this is my demo page
-            my new changes
-            this si my sdifnthet
-
-            this is smy asidnthet
+           all changes remove
 </body>
 </html>
